ubiquity (1.9.19) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Make "Before:" and "After:" strings (displayed next to partition bars)
    translatable.

  [ Mario Limonciello ]
  * Mythbuntu Frontend:
    - Run the "real" depmod once if we're adding a driver that got
      built on the live cd using DKMS. (LP: #268619)
    - Don't allow "custom" remotes during install (LP: #231823)

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 19 Sep 2008 14:17:08 +0100

ubiquity (1.9.18) intrepid; urgency=low

  * Start dbus and (in the case of the GTK frontend) gconfd in only-ubiquity
    mode (LP: #261073). I'm not entirely certain that accessibility will
    keep working with this ...
  * Set OVERRIDE_SHOW_ALL_LANGUAGES while calling localechooser on the
    timezone page as well as on the language page itself (LP: #253749).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 19 Sep 2008 02:48:36 +0100

ubiquity (1.9.17) intrepid; urgency=low

  * Call apt-setup with --log-output, since it breaks otherwise as of
    apt-setup 1:0.36 (LP: #271693).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 18 Sep 2008 14:50:56 +0100

ubiquity (1.9.16) intrepid; urgency=low

  [ Colin Watson ]
  * GTK frontend:
    - Put the "before" and "after" partition bars in a table so that they
      line up.
    - Mark the partition bar on the advanced partitioning page as
      non-expanding so that it doesn't take up nearly half the available
      space.

  [ Evan Dandrea ]
  * Add missing set_disk_layout stub function to the other frontends
    (LP: #271467).
  * Automatic update of included source packages: partman-partitioning
    59ubuntu6.

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 17 Sep 2008 16:47:46 -0400

ubiquity (1.9.15) intrepid; urgency=low

  * GTK frontend:
    - Don't set page_size in GtkAdjustments; as of GTK+ 2.14 it causes the
      value to be clamped to upper - page_size (LP: #264599).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 17 Sep 2008 03:06:59 +0100
